# w_files

./: libc.so.6
test_/: test
test_riscv/: .riscv.cmake.swp  CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake  riscv.cmake  riscv.env
test_riscv/src/: a.out  hello  hello.s  test.c.original  test.cpp
